--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<img src="img/hoid.webp" alt="HOID">
 		<h1 class="pt-sans-bold">HOID Project</h1>
 		<a href="javascript:void(0)" onclick="hideNavMenu()"><div title="Open navigations" class="img-navbar-menu"></div></a>
-		<a class="discord-nav" href="https://discord.gg/gdvrXrRusb" target="_blank">Discord</a>
+		<a class="discord-nav" href="https://discord.gg/hqpsGs3htV" target="_blank">Discord</a>
 		
 		<ul id="navbar" class="hide-nav">
 			<li><a id="introNavBtn">Introduction</a></li>
