--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>HOID Project</title>
+	<title>History of Indonesia Project</title>
 	<meta name="description" content="Welcome to HOID Project, an indonesian history mod based on World Conquest 4 by EasyTech. This Project is a rework of the base game with the plan such adding Indonesian Scenarios, Indonesian Historical Battle & more.">
 	<meta name="keywords" content="Indonesia, History, World Conqueror 4, WC4, World Conqueror, EasyTech, HOID Project, HOID Team">
 	<meta name="author" content="HOID Teams">
